<resources>
    <string name="app_name">Know Your Government</string>
    <string name="dummy_office_name">Dummy Office Name</string>
    <string name="dummy_official_name">Dummy Official Name</string>
    <string name="dummy_location">Chicago,IL 60616</string>
    <string name="dummy_official_party">Dummy party</string>

    <string name="address_title">Address:</string>
    <string name="phone_title">Phone:</string>
    <string name="email_title">Email:</string>
    <string name="website_title">Website:</string>
    <string name="default_text_values">No Data Provided</string>

    <string name="menu_location">location</string>
    <string name="menu_about">help</string>


    <string name="copyright_text">\u00A9 2018 Nisha Karamchandani</string>
    <string name="app_version">Version 1.0</string>

    <string name="network_error_message"><b>No Network Connection</b>\nData cannot be accessed/loaded \nwithout an Internet connection.</string>
</resources>
